# Text-Editor

./: CMakeLists.txt  LICENSE  README.md
src/: Main.qml  main.cpp
